List request controller
