# server/dto/errorDto.go
@@ -1,0 +1,5 @@
+package dto
+
+type ErrorDto struct {
+	Error string `json:"error"`
+}
