# server/dto/resDataDto.go
@@ -1,0 +1,15 @@
+package dto
+
+type ResDataDto struct {
+	Data       any        `json:"data"`
+	Pagination Pagination `json:"pagination"`
+}
+
+type Pagination struct {
+	Total  int64 `json:"total"`
+	Limit  int   `json:"limit"`
+	Offset int   `json:"offset"`
+}
+
+type RequestsDto struct {
+}
